# kid_site

./: .gitignore  Cargo.toml  README.md  aj_studying.service  build.service  deploy.sh
.cargo/: config.toml
settings/: base.yaml  development.yaml  doctor.yaml
src/: lib.rs  main.rs  security.rs  settings.rs  startup.rs  telemetry.rs
src/auth/: hash.rs  mod.rs  tokens.rs
src/endpoints/: .#index.rs  error.rs  health.rs  images.rs  index.rs  login.rs  mod.rs  register.rs  routes.rs  structure.rs  templates.rs  users.rs
src/endpoints/adrian/: doctor.rs  landing.rs  mod.rs  school.rs
src/endpoints/corbin/: landing.rs
src/models/: helpers.rs  mod.rs  mongo.rs
src/types/: mod.rs  tokens.rs
src/utils/: emails.rs
static/css/: style.css  style.css.map
static/scss/: _child_data.scss  _errors.scss  _login.scss  _main.scss  style.scss
templates/: adrian.html  base.html  corbin.html  doctor.html  email.html  errors.html  index.html  login.html  register.html
templates/parts/: doctor_visit.part.html
