[package]
name = "aj_studying"
version = "0.1.0"
edition = "2021"

[lints.clippy]
pedantic = { level = "deny", priority = 1 }
wildcard_imports = "deny"
must_use_candidate = "warn"
enum_glob_use = "deny"
nursery = { level = "deny", priority = 1 }
unwrap_used = "deny"

[profile.release]
overflow-checks = false
lto = "thin"
codegen-units = 1
panic = "abort"
incremental = false
opt-level = "z"
strip = "none"
rpath = false
debug-assertions = false

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
askama = "0.12.1"
dotenv = "0.15.0"
future-utils = "0.12.1"
lazy_static = "1.5.0"
log = "0.4.22"
mongodb = "3.0.1"
serde = { version = "1.0.208", features = ["derive"] }
simplelog = "0.12.2"
