[package]
name = "aj_studying"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "aj_studying"

[lints.clippy]
pedantic = { level = "deny", priority = 1 }
wildcard_imports = "deny"
must_use_candidate = "warn"
enum_glob_use = "deny"
nursery = { level = "deny", priority = 1 }
unwrap_used = "deny"

[profile.release]
overflow-checks = false
lto = "thin"
codegen-units = 1
panic = "abort"
incremental = false
opt-level = "z"
strip = "none"
rpath = false
debug-assertions = false

[dependencies]
actix-files = "0.6.6"
actix-web = { version = "4.9.0", features = ["secure-cookies"] }
askama = "0.12.1"
config = { version = "0.14.0", features = ["yaml"] }
deadpool-redis = "0.16.0"
dotenv = "0.15.0"
future-utils = "0.12.1"
lazy_static = "1.5.0"
mongodb = "3.0.1"
serde = { version = "1.0.208", features = ["derive"] }
simplelog = "0.12.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
		   "fmt",
		   "std",
		   "env-filter",
		   "registry",
		   "json",
		   "tracing-log"
		   ] }		   
