[package]
name = "kid_data"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "kid_data"

[lints.clippy]
pedantic = { level = "deny", priority = 1 }
wildcard_imports = "deny"
must_use_candidate = "warn"
enum_glob_use = "deny"
nursery = { level = "deny", priority = 1 }
unwrap_used = "deny"

[profile.release]
overflow-checks = false
lto = "thin"
codegen-units = 1
panic = "abort"
incremental = false
opt-level = "z"
strip = "none"
rpath = false
debug-assertions = false

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-session = { version = "0.10.0", features = ["cookie-session"] }
actix-web = { version = "4.9.0", features = ["secure-cookies"] }
argon2 = "0.5.3"
askama = "0.12.1"
chrono = "0.4.38"
config = { version = "0.14.0", features = ["yaml"] }
deadpool-redis = "0.18.0"
dotenv = "0.15.0"
hex = "0.4.3"
lazy_static = "1.5.0"
lettre = { version = "0.11.9", features = ["builder", "tokio1-native-tls"]} 
mongodb = "3.0.1"
openssl = { version = "0.10.66", features = ["vendored"] }
pasetors = "0.7.0"
rand = "0.8.5"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { version = "1.0.127", features = ["raw_value"] }
sha2 = "0.10.8"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json", "registry", "std", "tracing-log"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[dev-dependencies]
async-std = "1.13.0"
reqwest = "0.12"
rstest = "0.23.0"
